--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libft"]
 	path = libft
-	url = https://github.com/notoriousgtw/libft_42.git
+	url = git@github.com:notoriousgtw/libft_42.git
